Adding vendor route and undefined vendor while sniffing
